--- a/assets/component-newsletter.css
+++ b/assets/component-newsletter.css
@@ -46,10 +46,10 @@
 }
 
 .newsletter-form__button {
-  width: 4.4rem;
+  width: 8remrem;
   margin: 0;
 }
 
-.newsletter-form__button .icon {
+/* .newsletter-form__button .icon {
   width: 1.5rem;
-}
+} */
