--- a/assets/component-list-social.css
+++ b/assets/component-list-social.css
@@ -6,19 +6,22 @@
 
 @media only screen and (max-width: 749px) {
   .list-social {
-    justify-content: center;
+    justify-content: flex-end;
   }
 }
 
 .list-social__item .icon {
-  height: 1.8rem;
-  width: 1.8rem;
+  height: 2.5rem;
+  width: 2.5rem;
 }
 
 .list-social__link {
-  align-items: center;
-  display: flex;
-  padding: 1.3rem;
+  align-items: flex-end;
+  justify-content: flex-end;
+  flex-direction: row;
+  color: #fff;
+  display: inline-flex;
+  padding: 0.5rem;
 }
 
 .list-social__link:hover .icon {
