--- a/assets/component-newsletter.css
+++ b/assets/component-newsletter.css
@@ -10,9 +10,8 @@
 @media screen and (min-width: 750px) {
   .newsletter-form {
     flex-direction: row;
-    align-items: flex-start;
     margin: 0 auto;
-    max-width: 36rem;
+    max-width: 73rem;
   }
 }
 
@@ -46,7 +45,7 @@
 }
 
 .newsletter-form__button {
-  width: 8remrem;
+  width: 8rem;
   margin: 0;
 }
 
